feat: list words history
